fixed spacing on project cards and contact me section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -576,7 +576,7 @@ li {
 .card-content {
   height: 11rem;
   position: absolute;
-  padding: 3.9rem 3rem;
+  padding: 3rem 2rem;
   bottom: 0px;
   left: 0;
   right: 0;
@@ -589,7 +589,7 @@ li {
 
 .card-content p {
   font-size: 1.5rem;
-  line-height: 2.2rem;
+  line-height: 2rem;
   text-align: left;
   font-weight: 400;
   color: var(--primary-text);
@@ -616,7 +616,7 @@ li {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 3rem;
+  padding: 2rem 2rem 0 2rem;
 }
 
 .card-icon {
@@ -682,10 +682,11 @@ li {
 }
 
 .contact-details {
-  margin-top: 6rem;
   width: 100%;
+  margin-top: 6rem;
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
   justify-content: space-between;
 }
 
@@ -1082,13 +1083,7 @@ input:-webkit-autofill {
   .tab {
     font-size: 2.2rem;
   }
-  .contact-wrapper {
-    flex-direction: column;
-  }
-  .contact-details {
-    margin-top: 8rem;
-    align-items: center;
-  }
+
   .contact-container {
     width: auto;
   }
@@ -1152,14 +1147,14 @@ input:-webkit-autofill {
   .card-content h4 {
     font-size: 2.4rem;
     font-weight: 700;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0rem;
   }
 
   .card-content h5 {
     font-size: 1.8rem;
     font-weight: 500;
     color: var(--dim-white);
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
   .contact-container {
     padding: 0 7vw;
